fix: scrollbar turned off inside textarea. closes #1334

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   font-weight: 400;
 }
 
+textarea {
+  overflow: hidden;
+}
+
 .ant-pagination-item > a {
   color: #222732;
 }
